# geschichte

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  claude_plan.md  plan.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pr.yml
src/: app.rs  cache.rs  cli.rs  commit.rs  copy.rs  error.rs  lib.rs  main.rs  terminal.rs
src/app/: events.rs  mod.rs
src/diff/: mod.rs  parser.rs  side_by_side.rs  syntax.rs
src/git/: commands.rs  diff.rs  files.rs  history.rs  mod.rs  parser.rs  working.rs
src/ui/: commit_info.rs  file_picker.rs  mod.rs  state.rs
src/ui/common/: commits.rs  mod.rs  utils.rs
src/ui/side_by_side/: mod.rs
src/ui/unified/: mod.rs
tests/: app_tests.rs  commit_info_tests.rs  copy_tests.rs  git_history_tests.rs  lib.rs  search_tests.rs
tests/common/: fixtures.rs  helpers.rs
tests/integration/: file_picker_integration.rs  git_integration.rs  mod.rs
tests/unit/: app_tests.rs  cache_tests.rs  file_picker_tests.rs  git_tests.rs  mod.rs  snapshot_tests.rs
tests/unit/snapshots/: lib__unit__snapshot_tests__app_state_snapshots__app_state_after_resize.snap  lib__unit__snapshot_tests__app_state_snapshots__initial_app_state.snap  lib__unit__snapshot_tests__syntax_highlighting_snapshots__json_syntax_highlighting.snap  lib__unit__snapshot_tests__syntax_highlighting_snapshots__rust_syntax_highlighting.snap
