[package]
name = "geschichte"
version = "0.1.0"
edition = "2021"
authors = ["Geschichte Contributors"]
description = "A blazingly fast, read-only terminal UI for viewing git file history and diffs with rename tracking and working directory support"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rahulj51/geschichte"
repository = "https://github.com/rahulj51/geschichte"
documentation = "https://docs.rs/geschichte"
keywords = ["git", "tui", "history", "diff", "terminal"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "claude_plan.md",
    "plan.md",
    ".github/",
    "demo/",
    "screenshots/",
    "plans",
    "test_scripts"
]

# The minimum supported Rust version (updated due to transitive dependency requirements)
rust-version = "1.80"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
once_cell = "1.19"
chrono = "0.4"
regex = "1.10"
lru = "0.12"
fuzzy-matcher = "0.3"
arboard = "3.4"

# Syntax highlighting
syntect = "5.2"

# Serialization (for config)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Path handling
dirs = "5.0"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
insta = "1.39"
serial_test = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

# Note: Some transitive dependencies (like moxcms 0.7.5+) require newer Rust features
# If you encounter edition2024 errors, update Rust: rustup update
